--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ ul {
 ul {
   padding: 0;
 }
+
 .container {
   max-width: 1158px;
   margin: 0 auto;
@@ -357,9 +358,6 @@ ul {
   gap: 120px;
   align-items: baseline;
 }
-.container-logo-footer {
-  margin-right: 120px;
-}
 .logo-studio {
   color: var(--cloud);
 }
@@ -410,6 +408,69 @@ ul {
   fill: var(--cloud);
 }
 
+/* Footer form */
+
+.footer-form {
+  display: flex;
+  color: var(--white);
+  font-family: inherit;
+  gap: 24px;
+  align-items: end;
+}
+.footer-input-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.footer-label {
+  color: currentColor;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.footer-input {
+  color: currentColor;
+  font-family: inherit;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid var(--white, #fff);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  width: 264px;
+  height: 40px;
+  flex-shrink: 0;
+  padding-left: 16px;
+}
+.footer-input::placeholder {
+  font-size: 12px;
+  line-height: 0.04em;
+  color: var(--white, #fff);
+}
+.footer-form-btn {
+  color: currentColor;
+  padding: 8px 24px;
+  display: inline-flex;
+  gap: 16px;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 4px;
+  background: var(--iris, #4d5ae5);
+  height: 40px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: var(--ocean);
+}
+.subcsribe-icon {
+  fill: var(--white);
+}
+
 /* Modal window */
 .backdrop {
   position: fixed;
@@ -435,6 +496,7 @@ ul {
   background-color: var(--dairy);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  padding: 72px 24px 24px;
 }
 .backdrop.is-hidden .modal-window {
   transform: translate(-50%, -50%) scale(0);
@@ -477,6 +539,140 @@ ul {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+}
+
+.modal-caption {
+  color: var(--navyblue, #2e2f42);
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.modal-input-wrap {
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+.form-inputs-block {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+}
+.modal-label {
+  color: var(--lightslate, #8e8f99);
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+}
+.modal-input {
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  padding-left: 38px;
+  font-size: 12px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:hover,
+.modal-input:focus {
+  border-color: var(--iris);
+}
+
+.modal-input:focus-within + .modal-form-icon {
+  fill: var(--iris);
+}
+
+.modal-form-icon {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  fill: var(--navyblue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-comment {
+  width: 360px;
+  padding: 8px 16px;
+  resize: none;
+  border-radius: 4px;
+  height: 120px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  overflow: hidden;
+  font-size: 12px;
+  margin: 0;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-comment:hover,
+.modal-comment:focus {
+  border-color: var(--iris);
+}
+
+.modal-comment::placeholder {
+  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+}
+
+.checkbox-block {
+  display: flex;
+  gap: 8px;
+  margin-bottom: 24px;
+  align-items: center;
+}
+.checked-icon-block {
+  display: inline-flex;
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  border-radius: 2px;
+  background-color: transparent;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.policy-checkbox:checked + .policy-label span {
+  background-color: var(--iris);
+  border: none;
+  fill: var(--white);
+}
+.policy-checkbox:checked + .checked-icon {
+  fill: var(--white);
+}
+.policy-label {
+  color: var(--lightslate, #8e8f99);
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+}
+.policy-link {
+  color: var(--iris, #4d5ae5);
+}
+
+.form-send-btn {
+  display: block;
+  padding: 16px 64px;
+  border-radius: 4px;
+  background: var(--iris, #4d5ae5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.form-send-btn:hover,
+.form-send-btn:focus {
+  background-color: var(--ocean);
 }
 
 /* Second page portfolio */
