--- a/css/styles.css
+++ b/css/styles.css
@@ -417,10 +417,7 @@ ul {
   gap: 24px;
   align-items: end;
 }
-.footer-input-wrap {
-  display: flex;
-  gap: 24px;
-}
+
 .footer-label {
   color: var(--white);
   font-family: inherit;
@@ -551,9 +548,8 @@ ul {
 }
 .modal-input-wrap {
   display: flex;
-  gap: 8px;
   flex-direction: column;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 .form-inputs-block {
   display: flex;
@@ -564,13 +560,15 @@ ul {
   color: var(--lightslate, #8e8f99);
   font-family: inherit;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   margin-bottom: 4px;
 }
 .modal-input {
   width: 360px;
   height: 40px;
+  background-color: transparent;
+  outline: transparent;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   padding-left: 38px;
@@ -588,7 +586,8 @@ ul {
 
 .modal-form-icon {
   position: absolute;
-  bottom: 8px;
+  top: 50%;
+  transform: translateY(-50%);
   left: 16px;
   fill: var(--navyblue);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -614,7 +613,7 @@ ul {
   color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   font-family: inherit;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
 }
 
@@ -651,7 +650,7 @@ ul {
   color: var(--lightslate, #8e8f99);
   font-family: inherit;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   cursor: pointer;
 }
