--- a/css/styles.css
+++ b/css/styles.css
@@ -603,6 +603,7 @@ ul {
   font-size: 12px;
   margin: 0;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 .modal-comment:hover,
 .modal-comment:focus {
@@ -659,6 +660,9 @@ ul {
 }
 
 .form-send-btn {
+  min-width: 169px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
   display: block;
   padding: 16px 64px;
   border-radius: 4px;
@@ -668,6 +672,10 @@ ul {
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 }
 .form-send-btn:hover,
 .form-send-btn:focus {
