--- a/css/styles.css
+++ b/css/styles.css
@@ -418,7 +418,7 @@ ul {
   align-items: end;
 }
 
-.footer-label {
+.footer-form-caption {
   color: var(--white);
   font-family: inherit;
   font-weight: 500;
@@ -432,11 +432,14 @@ ul {
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid var(--white, #fff);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   width: 264px;
   height: 40px;
   flex-shrink: 0;
   padding-left: 16px;
+  font-size: 12px;
+  line-height: 0.04em;
+  line-height: 1.5;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 .footer-input::placeholder {
   font-size: 12px;
@@ -449,10 +452,12 @@ ul {
   display: inline-flex;
   gap: 16px;
   justify-content: center;
+  align-items: center;
   cursor: pointer;
   border-radius: 4px;
   background: var(--iris, #4d5ae5);
   height: 40px;
+  min-width: 165px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -592,8 +597,13 @@ ul {
   fill: var(--navyblue);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-comment {
+
+.modal-comment-wrap {
+  margin-bottom: 16px;
   width: 360px;
+}
+.modal-comment {
+  width: 100%;
   padding: 8px 16px;
   resize: none;
   border-radius: 4px;
@@ -604,6 +614,10 @@ ul {
   margin: 0;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
 }
 .modal-comment:hover,
 .modal-comment:focus {
@@ -640,12 +654,9 @@ ul {
 }
 
 .policy-checkbox:checked + .policy-label span {
-  background-color: var(--iris);
+  background-color: var(--ocean);
   border: none;
-  fill: var(--white);
-}
-.policy-checkbox:checked + .checked-icon {
-  fill: var(--white);
+  fill: var(--cloud);
 }
 .policy-label {
   color: var(--lightslate, #8e8f99);
