--- a/css/styles.css
+++ b/css/styles.css
@@ -437,20 +437,19 @@ ul {
   flex-shrink: 0;
   padding-left: 16px;
   font-size: 12px;
-  line-height: 0.04em;
+  letter-spacing: 0.04em;
   line-height: 1.5;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 .footer-input::placeholder {
   font-size: 12px;
-  line-height: 0.04em;
+  letter-spacing: 0.04em;
   color: var(--white, #fff);
 }
 .footer-form-btn {
   color: currentColor;
   padding: 8px 24px;
   display: inline-flex;
-  gap: 16px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -471,6 +470,7 @@ ul {
 }
 .subcsribe-icon {
   fill: var(--white);
+  margin-left: 16px;
 }
 
 /* Modal window */
@@ -687,6 +687,7 @@ ul {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  color: var(--white);
 }
 .form-send-btn:hover,
 .form-send-btn:focus {
